tests/snapshots/conformance__n_number_inf.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[Inf]
stdout --- 
<empty>
stderr --- 
error: unexpected character `I`. expected start of a json value
 --> stdin:1:2
  |
1 | [Inf]
  |  ^
